<resources>
    <string name="app_name">Lab4</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login"> Login</string>
    <string name="Enter_loginName">Login name</string>
    <string name="password">Password</string>
    <string name="Radio_Button">Radio button</string>
    <string name="CheckBox">Check Box</string>
    <string name="Switch">What does this button do?</string>
    <string name="flagDescription">flag</string>
    <string name="dialogMessage">Press OK if you are done</string>
    <string name="dialogTitle">Exit application. Are you sure?</string>
    <string name="ok">OK!</string>
    <string name="cancel">Cancel</string>
    <string name="response">My information to share</string>
    <string name="startChat">"Start chat"</string>
    <string name="sendMsg">Send</string>
    <string name="row_outgoing">outgoing message</string>
    <string name="row_incoming">incoming message</string>
    <string name="user_outgoing">User1</string>
    <string name="user_incoming">User2</string>
    <string name="showWeather">Weather</string>
    <string name="WeatherLook">Weather visual</string>
    <string name="currentTemp"> Current</string>
    <string name="minTemp"> Low</string>
    <string name="maxTemp"> High</string>
    <string name="wind"> Wind speed</string>

</resources>
