<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="android.labs.WeatherActivity">

    <ImageView
        android:id="@+id/weather"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/WeatherLook"
        android:layout_marginStart="10dp"
        android:visibility="visible" />
    <!--android:src="@mipmap/ic_launcher"-->

    <TextView
        android:id="@+id/current_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/currentTemp" />

    <TextView
        android:id="@+id/current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/currentTemp"
        android:text="@string/currentTemp" />

    <TextView
        android:id="@+id/low_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/minTemp" />

    <TextView
        android:id="@+id/low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/minTemp"
        android:layout_marginStart="10dp"
        android:text="@string/minTemp" />

    <TextView
        android:id="@+id/high_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/maxTemp" />

    <TextView
        android:id="@+id/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/maxTemp"
        android:layout_marginStart="10dp"
        android:text="@string/maxTemp" />

    <TextView
        android:id="@+id/wind_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/wind" />

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/wind"
        android:layout_marginStart="10dp"
        android:text="@string/wind" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:visibility="invisible" />
</LinearLayout>